# quassel

./: CMakeLists.txt
icons/: oxygen.qrc
src/ext/hunspell/: affentry.cxx
src/qtui/: chatscene.cpp  chatscene.h  inputwidget.cpp  inputwidget.h  mainwin.cpp  markerlineitem.cpp
src/qtui/settingspages/: inputwidgetsettingspage.cpp  inputwidgetsettingspage.ui
src/uisupport/: CMakeLists.txt  multilineedit.cpp  multilineedit.h  uistyle.cpp
src/uisupport/speller/: hunspell_adapter.cpp  speller_adapter.h  speller_qtextedit.cpp  speller_qtextedit.h
